# GolfModel

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  Grass_Leafs_01_Red.terrainlayer  Grass_Leafs_01_Yellow.terrainlayer  Grass_Leafs_02_Green.terrainlayer  LICENSE  Makefile  README.md  _pj2.mjs  _render.mjs  admin.html  classic.html  database.rules.json  grasspicker.html  holebuilder.html  index.html  marketing.html  package-lock.json  package.json  palPortrait.html  palview.html  playwright.config.ts  portrait.html  pyproject.toml  requirements.txt  slice3d.html  treecatalog.html  tsconfig.json  verify.tmp.mjs  vite.config.ts
asset-packs/: red-desert-set-README.md
assets/: CNAME
config/: courses.yaml  settings.yaml  tours.yaml
docs/: 00_MASTER_VISION.md  01_PROJECT_VISION.md  02_GAME_DESIGN_DOCUMENT.md  03B_REFERENCE_GUIDE.md  03_ART_DIRECTION.md  04_TECHNICAL_ARCHITECTURE.md  05_DEVELOPMENT_ROADMAP.md  06_CLAUDE_WORKFLOW.md  07_PLAYER_EXPERIENCE.md  08_LIVE_SERVICE_AND_PROGRESSION.md  09_PRODUCT_REQUIREMENTS.md  10_COURSE_DESIGN_BIBLE.md  11_ROADMAP_CHECKIN_2026-07-08.md  12_SESSION_EXIT_2026-07-09.md  13_PLAYTEST_FB9_2026-07-09.md  14_GOOGLE_PLAY_PUBLISHING_GUIDE.md  15_DEPLOY_BSGOLF_FUN.md  16_PAYMENTS.md  17_MARKETING_PLAN.md  19_V1.1_DESIGN_RECOMMENDATIONS.md  20_V1_FINAL_UX_ADMIN_PASS.md  21_RETENTION_AND_PERFORMANCE_PASS.md  22_V2_DELIGHT_AUDIT.md  23_V2_AUDIO_IDENTITY.md  24_CONTENT_EXPANSION_PROPOSAL.md  ARCHITECTURE_REVIEW.md  DEVICE_MATRIX.md  FIREBASE_SETUP.md  README.md  WORKFLOW.md  index.html  visual-bar.md
functions/: index.js  package.json  (+1 more)
(+1039 files in other folders)
