[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "golfmodel"
version = "0.1.0"
description = "Academic single-round golf score Over/Under value model"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "pyarrow>=18",
    "pyyaml>=6",
    "requests>=2.32",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[project.scripts]
golfmodel = "golfmodel.cli:app"

[tool.setuptools.packages.find]
include = ["golfmodel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
